--- a/src/Footer.css
+++ b/src/Footer.css
@@ -2,7 +2,56 @@
     position: fixed;
     bottom: 0;
     height: 65px;
-    width: 100%;
     background: #282828;
     padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    width: 97%;
+}
+.footer__left{
+    flex: 0.3;
+    display: flex;
+    align-items: center;
+    color: #fff;
+    width: 300px;
+}
+.footer__albumLogo{
+    height: 60px;
+    height: 60px;
+    margin-right: 20px;
+    object-fit: contain;
+}
+.footer__center{
+    flex: 0.4;
+    padding: 0 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: #fff;
+    max-width: 300px;
+}
+.footer__right{
+    flex: .3;
+    padding: 0 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: #fff;
+}
+.footer__green{
+    color: green;
+}
+.footer__songInfo > h4{
+    margin-bottom: 5px;
+}
+.footer__songInfo > p{
+    font-size: 12px;
+}
+.footer__icon:hover,
+.footer__green:hover{
+    transition: transform .2s ease-in;
+    transform: scale(1.2)!important;
+}
+.footer__right * .MuiSlider-root{
+    color: green;
 }
