--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 *{
   margin: 0;
 }
+body::-webkit-scrollbar{
+  width: 0;
+  display: none;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
